--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/jest": "26.0.19",
     "@types/node": "12.19.11",
     "@types/react": "17.0.0",
+    "@types/react-beautiful-dnd": "13.0.0",
     "@types/react-dom": "17.0.0",
     "immer": "8.0.0",
     "react": "17.0.1",
+    "react-beautiful-dnd": "13.0.0",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "4.1.3",
