--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-beautiful-dnd": "13.0.0",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.1",
+    "react-use": "15.3.4",
     "typescript": "4.1.3",
     "web-vitals": "1.0.1"
   },
