--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react": "17.0.38",
     "@types/react-beautiful-dnd": "13.1.2",
     "@types/react-dom": "17.0.11",
-    "immer": "8.0.4",
     "react": "17.0.2",
     "react-beautiful-dnd": "13.1.0",
     "react-dom": "17.0.2",
@@ -19,7 +18,10 @@
     "react-textarea-autosize": "8.3.3",
     "react-use": "17.3.2",
     "typescript": "4.5.4",
-    "web-vitals": "2.1.3"
+    "web-vitals": "2.1.3",
+    "y-indexeddb": "9.0.6",
+    "y-webrtc": "10.2.2",
+    "yjs": "13.5.24"
   },
   "scripts": {
     "start": "react-scripts start",
