--- a/package.json
+++ b/package.json
@@ -11,31 +11,28 @@
     "@types/react": "18.2.67",
     "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-dom": "18.2.22",
+    "@vitejs/plugin-react": "4.2.1",
     "immer": "10.0.4",
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
     "react-textarea-autosize": "8.5.3",
     "react-use": "17.5.0",
     "typescript": "5.4.2",
+    "vite": "5.1.6",
+    "vite-tsconfig-paths": "4.3.2",
     "web-vitals": "3.5.2"
   },
-  "resolutions": {
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0"
+  "resolutions":{
+    "@types/react": "18.2.67", 
+    "@types/react-dom": "18.2.22",
+    "react-redux": "7.2.9",
+    "use-memo-one": "1.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "start": "vite", 
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
